desktop spacing fix

--- a/src/app/componentes/project/project.module.css
+++ b/src/app/componentes/project/project.module.css
@@ -25,6 +25,6 @@
 
 @media (min-width: 768px) {
  .project {
-  gap: var(--spacing-8);
+  gap: var(--spacing-4);
  }
 }
